instructions.Instructions.scala.error
Compilation error:
Instructions:4: error: not found: value up
up()
^Instructions:5: error: not found: value up
up()
^Instructions:8: error: not found: value down
down()
^